--- a/coldstart-java-sso/src/main/webapp/WEB-INF/web.xml
+++ b/coldstart-java-sso/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,16 @@
     <dispatcher>FORWARD</dispatcher>
   </filter-mapping>
 
+  <!-- 跨域filter -->
+  <filter>
+    <filter-name>CORSFilter</filter-name>
+    <filter-class>com.zheng.common.filter.CORSFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>CORSFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
   <!-- 默认的spring配置文件是在WEB-INF下的applicationContext.xml -->
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -97,5 +107,9 @@
   <session-config>
     <session-timeout>30</session-timeout>
   </session-config>
+  
+  <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
 
 </web-app>
