--- a/coldstart-java-sso/src/main/webapp/WEB-INF/web.xml
+++ b/coldstart-java-sso/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,16 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <!-- HMAC API鉴权 filter -->
+  <filter>
+    <filter-name>HMACFilter</filter-name>
+    <filter-class>com.zheng.common.filter.HmacFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>HMACFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
   <!-- 默认的spring配置文件是在WEB-INF下的applicationContext.xml -->
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
