--- a/coldstart-java-sso/pom.xml
+++ b/coldstart-java-sso/pom.xml
@@ -237,6 +237,11 @@
       <artifactId>commons-compress</artifactId>
       <version>1.12</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.16</version>
+    </dependency>
     <!-- Hibernate Validator -->
     <dependency>
       <groupId>javax.persistence</groupId>
