--- a/coldstart-java-rearend/src/main/webapp/WEB-INF/web.xml
+++ b/coldstart-java-rearend/src/main/webapp/WEB-INF/web.xml
@@ -50,14 +50,14 @@
   </filter-mapping>
 
   <!-- HMAC API鉴权 filter -->
-  <!--<filter>-->
-    <!--<filter-name>HMACFilter</filter-name>-->
-    <!--<filter-class>com.dvs.rearend.common.filter.HmacFilter</filter-class>-->
-  <!--</filter>-->
-  <!--<filter-mapping>-->
-    <!--<filter-name>HMACFilter</filter-name>-->
-    <!--<url-pattern>/*</url-pattern>-->
-  <!--</filter-mapping>-->
+  <filter>
+    <filter-name>HMACFilter</filter-name>
+    <filter-class>com.dvs.rearend.common.filter.HmacFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>HMACFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 
   <!-- 默认的spring配置文件是在WEB-INF下的applicationContext.xml -->
   <listener>
